5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1644_2445.log
== SUBMITION (2019-06-10 10:09:43) 
-- CODE:
#!/usr/bin/env python

# -*- coding: utf-8 -*-

# Converta uma temperatura digitada em Celsius para Fahrenheit. F = 9*C/5 + 32 



c = input("Digite a temperatua em Celsius: ")

f = 9*c/5 + 32



print ('%d Fahrenheit' %f)
-- EXECUTION TIME:
0.861663
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 11, in <module>
    f = 9*c/5 + 32
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 10:10:03) 
-- CODE:
!/usr/bin/env python

 -*- coding: utf-8 -*-




c = input("Digite a temperatua em Celsius: ")

f = 9*c/5 + 32



print ('%d Fahrenheit' %f)
-- EXECUTION TIME:
0.534471
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 1
    !/usr/bin/env python
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 10:14:23) 
-- CODE:
temperatura=float(input( " Digite a temperatura em Celsius :"))
coeficiente = 9.0/5.0 
f = temperatura * coeficiente + 32 
print(f)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temperatura=float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 12:07:34) 
-- CODE:


escala = input("Em que escala a temp esta representada")
temp = float(input("Qual o valor da temperatura? "))

calcc = 5/9*(temp-32)
calcf = (9/5*temp) + 32

if (escala == "F"):
    print(calcc)
    
else:
    print(calcf)
-- EXECUTION TIME:
0.787067
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
